# toplang

./: .gitignore  BENCHMARKING.md  BENCHMARK_QUICKSTART.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_COMMENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NAN_BOXING_INTEGRATION.md  NAN_BOXING_RESULTS.md  NATIVE_COMPILATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_RESULTS.md  PERFORMANCE_ROADMAP.md  QUICK_SUMMARY.md  README.md  RELEASE.md  TESTING.md  benchmark_nanbox.sh  comprehensive_bench.sh  install.ps1  install.sh  quick_bench.sh  simple_bench.sh  test_examples.sh  test_string.top
.github/workflows/: benchmark.yml  ci.yml  quality.yml
benchmarks/: README.md  run_all.sh  run_benchmarks.sh  run_complete_benchmarks.sh  run_native_benchmarks.sh  run_vm_benchmarks.sh  run_with_tracking.sh  show_performance_history.sh
benchmarks/native/: array_sum.rs  build.sh  fibonacci.rs  primes.rs
benchmarks/python/: array_sum.py  factorial.py  fibonacci.py  nested_loops.py  primes.py
benchmarks/results/: native_results_20251114_182436.txt  native_results_20251114_183846.txt  performance_history.csv  results_20251113_160421.txt  results_20251113_160455.txt  results_20251113_161336.txt  vm_results_20251113_163221.txt  vm_results_20251113_164243.txt  vm_results_20251113_165435.txt  vm_results_20251113_170057.txt  vm_results_20251113_170308.txt  vm_results_20251113_171247.txt  vm_results_20251113_171552.txt  vm_results_20251113_173653.txt
benchmarks/toplang/: array_sum.top  factorial.top  fibonacci.top  nested_loops.top  primes.top
examples/: arithmetic.top  arrays.top  arrays_with_input.top  control_flow.top  fibonacci.top  fibonacci_bench.top  functions.top  hello.top  input.top  new_features.top  test_comparison_operators.top  test_loop_control.top  test_modulo.top  test_string_operations.top
homebrew/: README.md  toplang.rb
src/: ast.cpp  ast.h  ast.rs  bytecode.rs  codegen.cpp  codegen.h  codegen_c.rs  codegen_native.rs  compiler.rs  interpreter.rs  lexer.cpp  lexer.h  lexer.rs  main.cpp  main.rs  nanbox.rs  nanbox_safe.rs  optimizer.rs  parser.cpp  parser.h  parser.rs  peephole.rs  runtime.rs  token.h  token.rs  vm.rs  vm_nanbox.rs  vm_optimized.rs  vm_threaded.rs
