[package]
name = "toplang"
version = "0.0.22"
edition = "2021"
rust-version = "1.74"
authors = ["TopLang Contributors"]
description = "A simple, human-first programming language"
license = "MIT"

[lib]
name = "toplang"
path = "src/runtime.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "topc"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark_runner.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
# Native code generation
cranelift = "0.110"
cranelift-module = "0.110"
cranelift-jit = "0.110"
cranelift-object = "0.110"
cranelift-native = "0.110"
target-lexicon = "0.12"
object = "0.36"
# For executable generation
libloading = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
